# binary-protocol-fuzzer

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.in
src/: fuzzer.cpp  fuzzer.h  main.cpp  protocol.cpp  protocol.h
tests/: test_fuzzer.cpp
